--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "joblisting-site",
+	"name": "QuizApp",
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
@@ -10,6 +10,7 @@
 		"postcss-cli": "^7.1.1",
 		"react": "^16.13.1",
 		"react-dom": "^16.13.1",
+		"react-icons": "^3.10.0",
 		"react-router": "^5.1.2",
 		"react-router-dom": "^5.1.2",
 		"react-scripts": "3.4.1",
